# geographical-centroid-finder

./: README.md  README_eng.md  pyproject.toml  script1_GEOSGetCentroid.py
data/lineaCostaPpr/: lineaCostaPpr.dbf  lineaCostaPpr.shx
img/: 1_center.xcf
