[tool.poetry]
name = "sardinia-geographical-centroid"
version = "0.1.0"
description = ""
authors = ["Alberto Santagostino"]

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.8.1"
matplotlib = "^3.3.1"
descartes = "^1.1.0"
pyproj = "^2.6.1"
shapely = "^1.7.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.3"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
